--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -17,3 +17,8 @@ jobs:
       run: chmod +x gradlew
     - name: Build with Gradle
       run: ./gradlew build
+    - name: Upload result
+      uses: actions/upload-artifact@v1
+      with:
+        name: build result
+        path: build/libs
